--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -51,22 +51,28 @@ jobs:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
-          hugo \
-            --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+          hugo -D
+#          hugo \
+#            --minify \
+#            --baseURL "${{ steps.pages.outputs.base_url }}/"
 #      - name: Upload artifact
 #        uses: actions/upload-pages-artifact@v1
 #        with:
 #          path: ./public
 
   # Deployment job
-#  deploy:
-#    environment:
-#      name: github-pages
-#      url: ${{ steps.deployment.outputs.page_url }}
-#    runs-on: ubuntu-latest
-#    needs: build
-#    steps:
-#      - name: Deploy to GitHub Pages
-#        id: deployment
-#        uses: actions/deploy-pages@v1
+deploy:
+  runs-on: ubuntu-latest
+  needs: build
+  steps:
+      - name: Install Hugo CLI
+        run: |
+          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
+          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+      - name: Deploy with Hugo
+        env: # Env vars to allow AWS Access
+          AWS_ACCESS_KEY_ID: $${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: $${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: $${{ secrets.AWS_DEFAULT_REGION }}
+        run: |
+          hugo deploy -v
