--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -71,6 +71,8 @@ jobs:
           run: |
             wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
             && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+        - name: Checkout
+          uses: actions/checkout@v3
         - name: Deploy with Hugo
           env: # Env vars to allow AWS Access
             AWS_ACCESS_KEY_ID: $${{ secrets.AWS_ACCESS_KEY_ID }}
