--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -75,9 +75,9 @@ jobs:
           uses: actions/checkout@v3
         - name: Deploy with Hugo
           env: # Env vars to allow AWS Access
-            AWS_ACCESS_KEY_ID: $${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: $${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            AWS_DEFAULT_REGION: $${{ secrets.AWS_DEFAULT_REGION }}
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           run: |
             echo $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY \
             && hugo deploy -v
