--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -62,8 +62,9 @@ jobs:
 
   # Deployment job
   deploy:
-    runs-on: ubuntu-latest
     needs: build
+    runs-on: ubuntu-latest
+    environment: deploy
     steps:
         - name: Install Hugo CLI
           env:
@@ -79,5 +80,4 @@ jobs:
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           run: |
-            echo $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY \
-            && hugo deploy -v
+            hugo deploy -v
